collection page also use bootstrap-table

--- a/ybk/templates/user/position.html
+++ b/ybk/templates/user/position.html
@@ -38,7 +38,7 @@
         <div class="col-md-4">
          <b>年化收益:</b> {{ (annual_profit or 0) | strformat('{:.1f}') }}元
         </div>
-        <table id="position-list"
+        <table id="position-list" class="table"
                 data-toggle="table"
                 data-classes="table table-condensed"
                 data-locale="zh-CN"
