--- a/ybk/templates/frontend/announcement.html
+++ b/ybk/templates/frontend/announcement.html
@@ -1,9 +1,17 @@
 {% extends "layout.html" %}
 
 {% block css %}
-    <link href="{{ url_for('static', filename='css/selectize.bootstrap3.css') }}" rel="stylesheet">
 
     <link rel="alternate" type="application/rss+xml" title="邮币卡公告聚合 {% if exchange %}- {{exchange }} {% endif %}{% if type_ %}- {{typecn}} {% endif %}- RSS订阅" href="{{ url_for('frontend.announcement_feed', exchange=exchange, type=type_) }}" />
+
+    {% if config.DEBUG %}
+      <link href="{{ url_for('static', filename='css/bootstrap-table.min.css') }}" rel="stylesheet">
+    {% else %}
+     {% assets filters="cssmin", output="assets/announcement.css"
+                "css/bootstrap-table.min.css" %}
+          <link href="{{ ASSET_URL }}" rel="stylesheet">
+      {% endassets %}
+    {% endif %}
 {% endblock %}
 
 {% block main %}
@@ -136,78 +144,56 @@
 
 
         <h2>交易品种</h2>
-        <table class="table table-condensed table-hover">
+        <table id="collection-list" class="table"
+                data-toggle="table"
+                data-classes="table table-condensed"
+                data-locale="zh-CN"
+                data-sort-name="offers_at"
+                data-sort-order="desc"
+                data-show-export="true"
+                data-url="{{ url_for('frontend.collection_list') }}"
+                data-pagination="true"
+                data-side-pagination="server"
+                data-page-size="25"
+                data-show-refresh="true"
+                data-search="true">
           <thead>
-            <th class="">申购时间</th>
-            <th class="">交易所</th>
-            <th class="">藏品简称</th>
-            <th class="">藏品代码</th>
-            <th class="text-right">申购价格</th>
-            <th class="text-right">申购数量</th>
-            <th class="text-right">资金配比</th>
-            <th class="text-right">资金市值</th>
-            <th class="text-right">资金中签率</th>
-            <th class="text-right">现涨幅</th>
+            <th data-field="offers_at" data-sortable="true">申购日</th>
+            <th data-field="exchange" data-sortable="true" data-formatter="exchangeFormatter">交易所</th>
+            <th data-field="name" data-sortable="true">藏品名</th>
+            <th data-field="symbol" data-sortable="true">代码</th>
+            <th data-field="offer_price"  data-sortable="true" class="text-right">申价</th>
+            <th data-field="offer_quantity" data-sortable="true" class="text-right">申量</th>
+            <th data-field="offer_cash_ratio" data-sortable="true" class="text-right">资金</th>
+            <th data-field="offer_cash" data-sortable="true" class="text-right">市值</th>
+            <th data-field="result_ratio_cash" data-sortable="true" class="text-right">中签率</th>
+            <th data-field="total_increase" data-sortable="true" class="text-right">现涨幅</th>
           </thead>
           <tbody>
-          {% for c in collections %}
-            <tr>
-              <td>{{ c.offers_at | bjdate }}</td>
-              <td><a href="{{ url_for('frontend.announcement_collection', exchange=c.exchange) }}">{{ c.exchange }}</a></td>
-              <td>{{ c.name }}</td>
-              <td>{{ c.symbol }}</td>
-              <td class="text-right">{{ c.offer_price | strformat('{:4.2f}') }}</td>
-              <td class="text-right">{{ c.offer_quantity | strformat('{}') }}</td>
-              <td class="text-right">{{ c.offer_cash_ratio | percentage }}</td>
-              <td class="text-right">{{ c.offer_cash | strformat('{:4.1f}') }}</td>
-              <td class="text-right">{{ c.result_ratio_cash | percentage('.3') }}</td>
-              <td class="text-right">{{ c.total_increase | percentage('.1') }}</td>
-            </tr>
-            {% endfor %}
           </tbody>
         </table>
-
-
-        {% if pagination %}
-        <nav style="margin-top:-30px;">
-          <ul class="pagination">
-            {% if pagination.has_prev %}
-            <li>
-              <a href="#" aria-label="上一页" data-page="{{pagination.page-1}}">
-                <span aria-hidden="true">&laquo;</span>
-              </a>
-            </li>
-            {% endif %}
-            {%- for page in pagination.iter_pages() %}
-                {% if page %}
-                  {% if page != pagination.page %}
-                    <li><a href="#" data-page="{{page}}">{{ page }}</a></li>
-                  {% else %}
-                    <li class="active"><a>{{ page }}</a></li>
-                  {% endif %}
-                {% else %}
-                    <li><span class=ellipsis>…</span></li>
-                {% endif %}
-            {%- endfor %}
-            {% if pagination.has_next %}
-            <li>
-              <a href="#" aria-label="下一页" data-page="{{pagination.page+1}}">
-                <span aria-hidden="true">&raquo;</span>
-              </a>
-            </li>
-            {% endif %}
-          </ul>
-        </nav>
-        {% endif %} <!-- if pagination -->
-
-
-
       {% endif %}
     </div>
   </div>
 {% endblock %}
 
 {% block js %}
+
+  {% if config.DEBUG %}
+    <script src="{{ url_for('static', filename='js/bootstrap-table.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/bootstrap-table-zh-CN.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/bootstrap-table-export.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/tableExport.min.js') }}"></script>
+  {% else %}
+    {% assets filters="jsmin", output="assets/position.js",
+              "js/tableExport.min.js",
+              "js/bootstrap-table.min.js",
+              "js/bootstrap-table-zh-CN.min.js",
+              "js/bootstrap-table-export.js" %}
+        <script type="text/javascript" src="{{ ASSET_URL }}"></script>
+    {% endassets %}
+  {% endif %}
+
     <script>
         function reselect(params){
             if (!params.page){
@@ -236,6 +222,18 @@
         });
         $('.pagination').on('click', 'a', function(){
             reselect({page: $(this).data('page')});
+        });
+
+        function exchangeFormatter(value, row, index) {
+          return '<a href="#" name="exchange" ' +
+            'data-exchange="' + value + '">' + value + '</a>'
+        }
+        $('table').on('click', 'a[name=exchange]', function(e) {
+          e.preventDefault();
+          // $('#collection-list').bootstrapTable('refresh', {query: {search: $(this).data('exchange')} })
+          $('.search input').val($(this).data('exchange'));
+          $('.search input').trigger('keyup');
+          // console.log($(this).data('exchange'));
         });
     </script>
 {% endblock %}
