--- a/ybk/templates/user/position.html
+++ b/ybk/templates/user/position.html
@@ -21,13 +21,13 @@
       <div class="col-md-8">
         <h3>持仓概况</h3>
         <div class="col-md-4">
-         <b>参与的交易所:</b> {{ num_exchanges or 0 }}家
-        </div>
-        <div class="col-md-4">
          <b>持有藏品:</b> {{ num_collections or 0 }}种
         </div>
         <div class="col-md-4">
          <b>平均涨幅:</b> {{ (average_increase or 0) | percentage('.1') }}
+        </div>
+        <div class="col-md-4">
+         <b>持仓总市值:</b> {{ market_value or 0 | strformat('{:.1f}') }}元
         </div>
         <div class="col-md-4">
          <b>未实现收益(浮盈):</b> {{ (unrealized_profit or 0) | strformat('{:.1f}') }}元
