--- a/ybk/templates/user/position.html
+++ b/ybk/templates/user/position.html
@@ -27,7 +27,7 @@
          <b>平均涨幅:</b> {{ (average_increase or 0) | percentage('.1') }}
         </div>
         <div class="col-md-4">
-         <b>持仓总市值:</b> {{ market_value or 0 | strformat('{:.1f}') }}元
+         <b>持仓总市值:</b> {{ (market_value or 0) | strformat('{:.1f}') }}元
         </div>
         <div class="col-md-4">
          <b>未实现收益(浮盈):</b> {{ (unrealized_profit or 0) | strformat('{:.1f}') }}元
