--- a/ybk/templates/frontend/trade.html
+++ b/ybk/templates/frontend/trade.html
@@ -1,8 +1,79 @@
 {% extends "layout.html" %}
+
+
 {% block main %}
-    <div class="row" style="margin-bottom: 20px;">
-      <div class="text-center" style="border: 1px solid #ccc; margin: 30px; padding-bottom: 10px;">
-        <h1>施工中... 0%</h1>
-      </div>
+    <div class="col-md-12">
+        <div id="chart1"></div>
+            <!-- k线 -->
+        <div id="chart2"></div>
+            <!-- 成交量 -->
+        <div id="bar">
+            <!-- 全部/指数/自选/当前 -->
+        </div>
     </div>
+{% endblock %}
+
+
+{% block js %}
+<script src="//cdn.bootcss.com/echarts/2.2.5/echarts.js"></script>
+<script type="text/javascript">
+    require.config({
+        paths: {
+            echarts: '//cdn.bootcss.com/echarts/2.2.5/'
+        }
+    });
+    require(
+        [
+            'echarts',
+            'echarts/chart/k',
+        ],
+        function (ec) {
+            // 通用选项
+            option = {
+                tooltip : {
+                    trigger: 'axis',
+                    showDelay: 0,             // 显示延迟，添加显示延迟可以避免频繁切换，单位ms
+                    formatter: function (params) {
+                        var res = params[0].name;
+                        res += '<br/>' + params[0].seriesName;
+                        res += '<br/>  开盘 : ' + params[0].value[0] + '  最高 : ' + params[0].value[3];
+                        res += '<br/>  收盘 : ' + params[0].value[1] + '  最低 : ' + params[0].value[2];
+                        return res;
+                    }
+                },
+                toolbox: {
+                    show : true,
+                    feature : {
+                        mark : {show: true},
+                        dataZoom : {show: true},
+                        magicType : {show: true, type: ['line', 'bar']},
+                        restore : {show: true},
+                        saveAsImage : {show: true}
+                    }
+                },
+                grid: {
+                    x: 80,
+                    y: 40,
+                    x2:20,
+                    y2:25
+                },
+                yAxis : [
+                    {
+                        type : 'value',
+                        scale:true,
+                        boundaryGap: [0.05, 0.05],
+                        splitArea : {show : true}
+                    }
+                ],
+            }
+            // title, legend, series, xAxis from ajax
+            var chart1 = ec.init(document.getElementById('chart1'));
+            chart1.setOption(option);
+            var chart2 = ec.init(document.getElementById('chart2'));
+            chart2.setOption(option);
+        }
+    );
+    var chart1 = ec.init(document.getElementById('chart1'));
+    var chart2 = ec.init(document.getElementById('chart2'));
+</script>
 {% endblock %}
