--- a/ybk/templates/frontend/about.html
+++ b/ybk/templates/frontend/about.html
@@ -1,11 +1,20 @@
 {% extends "layout.html" %}
 {% block main %}
-    <div class="row" style="margin-bottom: 20px;">
-      <div class="text-center" style="border: 1px solid #ccc; margin: 30px; padding-bottom: 10px;">
-        <h1>施工中... 0%</h1>
-      </div>
-    </div>
-        <h3>这个网站是什么?/什么是邮币卡线上交易?</h2>
-        <h3>为什么要投资邮币卡?</h2>
-        <h3>怎样投资邮币卡</h2>
+    <h3>什么是邮币卡线上交易?</h3>
+    <p>类似股票交易, 不同的是</p>
+    <ol>
+      <li>交易物不是公司股权, 而是邮币卡(邮票、钱币、电话卡等文化产权物品)</li>
+      <li>T+0交易, 可以当天买卖</li>
+      <li>满足一定数量则可以提货, 直接拿到实物</li>
+      <li>周六(有些周日)也可以交易</li>
+    </ol>
+    <h3>为什么要投资邮币卡?</h3>
+    <ol>
+      <li>赚钱: A股花了1年从2000点涨到5000点, 邮币卡花了1年从200点涨到5000点</li>
+      <li>早期: A股第一批股民留下了很多一夜暴富的传说, 第一批邮币卡民会怎样? 不想参与一下吗?</li>
+      <li>低风险: 如果不参与二级市场而只是做打新的话, 风险甚至比A股还低: 申购价比市场价还低, 买了提货再卖出都稳赚不赔, 君不见中石油48块一路跌到个位数。</li>
+    </ol>
+    <h3>这个网站背后是谁?</h3>
+    <p>个人投资者, IT工程师, <a href="https://github.com/observerss" target="_blank">@observerss</a> 及其同事 <a href="https://github.com/popsars" target="_blank">@popsars</a> </p>
+    <p>2015年6月, 发现邮币卡投资值得一搞, 但并没有较好的咨询整合和分析平台, 遂挖坑搞起</p>
 {% endblock %}
